--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,3 +16,21 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+# apiVersion: skaffold/v2alpha3
+# kind: Config
+# deploy:
+#   kubectl:
+#     manifests:
+#       - ./infra/k8s/*
+# build:
+#   googleCloudBuild:
+#     projectId: profound-nuance-324120
+#   artifacts:
+#     - image: us.gcr.io/profound-nuance-324120/auth
+#       context: auth
+#       docker:
+#         dockerfile: Dockerfile
+#       sync:
+#         manual:
+#           - src: "src/**/*.ts"
+#             dest: .
