--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,14 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: yongcycchen/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
+            dest: .
 # apiVersion: skaffold/v2alpha3
 # kind: Config
 # deploy:
