--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -24,6 +24,14 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: yongcycchen/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
     - image: yongcycchen/client
       context: client
       docker:
