--- a/payments/package.json
+++ b/payments/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cyctickets/common": "^1.0.14",
+    "@cyctickets/common": "^1.0.16",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
@@ -31,6 +31,7 @@
     "mongoose": "^6.0.2",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.174.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
