--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -1,7 +1,9 @@
 name: tests-payments
 
-on: pull_request
-
+on:
+  pull_request:
+    path:
+      - "payments/**"
 jobs:
   build:
     runs-on: ubuntu-latest
