--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,7 +1,9 @@
 name: tests-auth
 
-on: pull_request
-
+on:
+  pull_request:
+    path:
+      - "auth/**"
 jobs:
   build:
     runs-on: ubuntu-latest
