--- a/.github/workflows/tests-tickets.yml
+++ b/.github/workflows/tests-tickets.yml
@@ -1,7 +1,9 @@
 name: tests-tickets
 
-on: pull_request
-
+on:
+  pull_request:
+    path:
+      - "tickets/**"
 jobs:
   build:
     runs-on: ubuntu-latest
