--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,7 +1,9 @@
 name: tests-orders
 
-on: pull_request
-
+on:
+  pull_request:
+    path:
+      - "orders/**"
 jobs:
   build:
     runs-on: ubuntu-latest
